# rental-vina

./: .gitignore  CLAUDE.md  ROADMAP.md  SPEC.md  index.html
backend/: .env.example  PLAN.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2ed133f5116c_add_sale_price_discounted_and_change_.py  736c95441d70_initial_tables.py  90a2cadb8941_add_locations_table_and_replace_.py  a1b2c3d4e5f6_rename_locale_uk_to_ua.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  amenity.py  location.py  property.py  property_image.py  property_translation.py  user.py
backend/app/routers/: admin.py  amenities.py  auth.py  properties.py
backend/app/schemas/: __init__.py  amenity.py  common.py  location.py  property.py  user.py
backend/app/scripts/: seed_admin.py
backend/app/services/: amenity_service.py  auth_service.py  cloudinary_service.py  location_service.py  property_service.py
backend/tests/: conftest.py  test_auth.py
frontend/: PLAN.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/app/[locale]/: layout.tsx
frontend/src/components/ui/: AmenityList.tsx  Badge.tsx  Button.tsx  (+11 more)
frontend/src/context/: AuthContext.tsx
frontend/src/i18n/: config.ts  request.ts  routing.ts
frontend/src/messages/: en.json  es.json  ru.json  ua.json
frontend/src/types/: property.ts  user.ts
frontend/src/utils/: cn.ts  slugify.ts
(+21 files in other folders)
